# wavezero

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-ci.yml
apps/android/: BRIDGE.md  README.md  build.gradle.kts  settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/flutter/wavezero_app/: README.md  pubspec.yaml
apps/flutter/wavezero_app/android/: build.gradle.kts  settings.gradle.kts
apps/flutter/wavezero_app/lib/: main.dart
apps/flutter/wavezero_app/test/: audio_quality_test.dart  catalog_track_manifest_test.dart  playback_metrics_test.dart
crates/wavezero-core/: Cargo.toml
crates/wavezero-core/src/: cache.rs  lib.rs  manifest.rs  metrics.rs  network.rs  prefetch.rs  queue.rs
crates/wavezero-ffi/: Cargo.toml  README.md
crates/wavezero-ffi/src/: lib.rs
docs/: DEVELOPMENT.md  DISTRIBUTION.md  METRICS_TESTING.md  ROADMAP.md  android-playback-proof.md  architecture.md  cache-foundation.md  flutter-rust-native-boundary.md  local-catalog-test.txt  max-stack-architecture.md  playback-engine.md  streaming-pipeline.md
infra/database/: schema.sql
infra/encoding/: README.md
scripts/: wavezero-local-ip.ps1  wavezero-run-api.ps1  wavezero-run-audio.ps1  wavezero-run-flutter.ps1
scripts/dev/: android-assemble-debug.ps1  android-firebase-upload-debug.ps1  android-install-debug.ps1  check-local-env.ps1  flutter-run-android.ps1
services/api/: Cargo.toml
services/api/fixtures/: dev_catalog.json
services/api/src/: main.rs
services/edge-worker/: package.json  wrangler.toml
services/edge-worker/src/: index.ts
(+32 files in other folders)
