[package]
name = "wavezero-api"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://example.com/wavezero"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
wavezero-core = { path = "../../crates/wavezero-core" }
